syntax = "proto3";

package notifier;
option go_package = "./;notifier";

message LoadConfigsRequest {
    map<string,string> configs = 1;
}

message LoadConfigsResponse {
}

message UpdateX509SVIDRequest {
}

message UpdateX509SVIDResponse {
}

message UpdateJWTSVIDRequest {
}

message UpdateJWTSVIDResponse {
}

message UpdateJWTBundleRequest {
}

message UpdateJWTBundleResponse {
}

service Notifier {
    rpc LoadConfigs(LoadConfigsRequest) returns (LoadConfigsResponse) {};
    rpc UpdateX509SVID(UpdateX509SVIDRequest) returns (UpdateX509SVIDResponse) {};
    rpc UpdateJWTSVID(UpdateJWTSVIDRequest) returns (UpdateJWTSVIDResponse) {};
    rpc UpdateJWTBundle(UpdateJWTBundleRequest) returns (UpdateJWTBundleResponse) {};
}
